# test_task

./: CMakeLists.txt  CMakePresets.json  README.md  Readme.md
TT_17471525337226282070_GK/: .gitignore  LICENSE  README.md
TT_17471525337226282070_GK/cmake/: 3rdparty_config.cmake
TT_17471525337226282070_GK/source/: CMakeLists.txt  default_settings.hpp  game_engine.hpp  settings.cpp  settings.hpp
TT_17471525337226282070_GK/source/utils/: point.hpp  sdl_mouse_handler.cpp  sdl_renderer_ptr.hpp  sdl_window_ptr.hpp
TT_17471525337226282070_GK/tests/: main.cpp
TT_18446459949962237711_GK/: .gitignore  CMakeLists.txt
TT_18446459949962237711_GK/cmake/: 3rdparty.cmake  3rdparty_config.cmake
TT_18446459949962237711_GK/source/: CMakeLists.txt  auth_gater.cpp  auth_gater.hpp  http_server.cpp  http_server.hpp  listener.cpp  request_handler.hpp
TT_18446459949962237711_GK/source/error/: error.cpp  http_error.hpp
TT_18446459949962237711_GK/source/utils/: fail_report.hpp  files_prepare.cpp  files_prepare.hpp  filesystem_helpers.cpp
TT_18446459949962237711_GK/tests/: handle_response.hpp  main.cpp
TT_18446459949962237711_GK/tests/utils/: ops.ipp  stream_crc32.cpp
cmake/: 3rdparty.cmake
docs/: PLAN.md  PRD.md
source/: application.cpp  application.hpp  board.cpp  board.hpp  cli_options_parser.cpp  cli_options_parser.hpp  color_palete.hpp  game_engine.cpp  http_session.cpp  http_session.hpp  io_interactor.cpp  io_interactor.hpp  listener.hpp  main.cpp  renderer.cpp  renderer.hpp  settings.cpp  settings.hpp
source/error/: error.cpp  error.hpp
source/utils/: algorithm.hpp  filesystem_helpers.hpp  run_io_context.hpp  sdl_mouse_handler.hpp
tests/: CMakeLists.txt  http_client.cpp  http_client.hpp  http_session.cpp  http_session.hpp
tests/utils/: file_generators.cpp  file_generators.hpp  stream_crc32.hpp
